--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ a,
 a:hover {
     color: #313131;
 }
-img {
+.img {
     max-width: 400px;
     height: auto;
 }
@@ -178,7 +178,7 @@ textarea:focus {
     padding: 90px 0;
 }
 .ptb-100 {
-    padding: 100px 0;
+    padding: 10px 0;
 }
 .pt-100 {
     padding-top: 100px;
@@ -1398,8 +1398,7 @@ a.slicknav_item.slicknav_row {
     margin: 0 5px;
 }
 .carousel-indicators {
-    bottom: auto;
-    margin: 25px 0 0;
+     margin: 25px 0 0;
 }
 .carousel .carousel-indicators li img {
     max-height: 60px;
