--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -29,10 +29,18 @@
 		text-align: center;
 		width: 100%;
 	}
+	.d-block.w-100
+	{
+		height: 300px;
+	}
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.hero-area {
 		padding: 75px 0 25px;
+	}
+	.logo img{
+		width:200%;
+		height: 50px;
 	}
 	.menubar .logo {
 		padding: 15px 0;
@@ -43,6 +51,10 @@
 	}
 	.hero-area p {
 		margin: 0 0 25px;
+	}
+	.d-block.w-100
+	{
+		height: 300px;
 	}
 	.about-area-info {
 		margin-top: 40px;
@@ -131,11 +143,23 @@
 	.responsive-menu {
 		display: block;
 	}
+	.logo img{
+		width:200%;
+		height: 50px;
+	}
 	.mainmenu {
 		display: none;
 	}
 	.menubar .logo {
 		text-align: center;
+	}
+	.d-block.w-100
+	{
+		height: 300px;
+	}
+	.bigword
+	{
+		font-size : 30px;
 	}
 	header.header-area .header-right-content li:nth-child(2) {
 		position: static;
@@ -515,6 +539,14 @@
 @media only screen and (max-width: 380px){
 	.login-popup {
 		width: 100%;
+	}
+	.d-block.w-100
+	{
+		height: 300px;
+	}
+	.bigword
+	{
+		font-size : 30px;
 	}
 	.sign-with::before,
 	.sign-with::after {
