--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,25 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
 }
-
+.hero .carousel-inner .carousel-item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(19, 18, 18, 0), rgba(0, 0, 0, 0.5));
+    z-index: 1; /* Adjust the z-index as needed */
+  }
+  
+  .hero .carousel-caption {
+    position: absolute;
+  
+     z-index: 2; /* Ensure the caption is above the gradient overlay */
+    color: white; /* Set the caption text color */
+  }
+  
+  
 /*----------------------------
 ---------- RESET CSS ---------
 ----------------------------*/
